[package]
name = "elliptic_curve_cryptography"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ec-generic = "0.1.14"
hex = "0.4.3"
num-bigint = { version = "0.4.5", features = ["rand"] }
rand = "0.8.5"
sha256 = "1.5.0"
